

JTAGS


Changes between versions 0.96 and 0.97 (Date TBD)
---------------------------------------------------

- Changed license to GNU GPL version 3.

- Improved Java code parsing.

- Added support for Java enums.

- Binding case-fold-search with let instead of setting it with setq.


Changes between versions 0.95 and 0.96 (2008-10-03)
---------------------------------------------------

- Improved member completion: Members that are not visible in the current scope
  are now excluded from the list of matching members. Members in super classes
  are now included in the list, but are displayed using a different face (GNU
  Emacs). When completing a member in a class (and not an object), only static
  members are included in the list of matching members.

- Function jtags-show-declaration now stores a tag mark so it can be retrieved
  by etags function pop-tag-mark (M-*).

- Changed jtags to be an autoloadable minor mode - jtags-mode. Moved key
  bindings and menu to jtags-mode-map.

- Added support for Java 5 for loops.

- Added function jtags-buffer-tag-table-list to parse and return the tags table
  list.

- Added customization of the etags command run when updating tags tables files.

- Changed to jtags-save-buffer-state instead of c-save-buffer-state.

- Improved Java code parsing: packages.

- Improved tags table file parsing.


Changes between versions 0.94 and 0.95 (2008-02-01)
---------------------------------------------------

- Fixed "Unbalanced parentheses" bug. jtags-filter-class-list assumes that the
  point is in the class in case of scan error.

- When a local declaration shadows a class member, jtags now finds the local
  declaration instead of the class member.

- Split function jtags-lookup-member in two - jtags-lookup-identifier looks up
  the definition of an identifier, and jtags-lookup-class-members looks up all
  members in a class. This improves performance, and makes the code more
  readable.
