@@ -71,8 +71,6 @@
   '("^java\\."
     "^javax\\."
     "-"
-    "^junit\\."
-    "-"
     "^org\\."
     "^net\\."
     "^com\\."
